# ipl_auction

./: .gitignore  Makefile  pyproject.toml  readme.md
.github/workflows/: update-readme.yml
data/: README.md  auction_2021.csv  auction_all_years.csv  auction_with_performance.csv  ipl_auction.csv  ipl_batsmen.csv  ipl_bowlers.csv  name_aliases.csv  player_registry.csv  player_season_stats.csv  player_season_war.csv  retained_players.csv
data/2022 Auction/: IPL_2022_Sold_Players.csv
data/2023 Auction/: IPL_2023_Auction_Pool.csv  IPL_2023_Auction_Sold.csv
data/acquisitions/: auction_all_years.parquet  do_not_merge.csv  non_auction_acquisitions.csv  player_registry.csv
data/analysis/: auction_inflation_adjusted.csv  predicted_duds_2026.csv  (+4 more)
models/: war_forecast_xgb.joblib
notebooks/: 01_descriptive_analysis.ipynb  01_descriptive_analysis_executed.ipynb  02_panel_analysis.ipynb  02_panel_analysis_executed.ipynb
scripts/: adjust_inflation.py  assemble_auction_data.py  build_player_registry.py  compute_war.py  hedonic_regression.py  identify_duds.py  match_player_names.py  predict_duds.py  process_deliveries.py  scrape_auction_2026.py  update_readme_tables.py  verify_data_consistency.py
tabs/: backtest_results.csv  disappointments.csv  economic_summary.txt  forecast_evaluation.txt  lucky_unlucky.csv  player_counts_by_year.md  predicted_duds_2026.csv  prediction_eval_2025.csv  regression_results.txt  retroactive_predictions.csv  retroactive_summary.csv  team_efficiency.csv  validation_by_year.csv  validation_report.txt  war_predictions.csv  worst_bets.csv
(+1882 files in other folders)
