[project]
name = "ipl-auction"
version = "0.1.0"
description = "IPL Auction Price Analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "statsmodels",
    "scikit-learn",
    "xgboost",
    "rapidfuzz",
    "scipy",
    "joblib",
    "requests",
    "linearmodels",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
    "seaborn",
]
